# simulation

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup_repo.sh
analysis/: build_comparison_table.py  tfow_compound_hawkes.py  tfow_genuine_eval.py  tfow_mt_hawkes.py  tfow_nmh_thinning.py  tfow_stylized_facts.py  tfow_world_model_diagnostics.py
archive/: README.md
diagram/: make_diagrams.py
docs/: ADDING_A_MODEL.md  ARCHITECTURE.md  LGM_SWEEP.md  MODEL_NOTES.md  RESULTS.md  ROADMAP.md  RUNBOOK.md  next_model_gmh.md
mm/: README.md  mm_backtest.py  rl_maker.py  world_model.py
models/: README.md  lgm_decoder.py  train.py  volume_set_mtpp.py
notebooks/: ss2p2_toy_tpp.ipynb
paper/: .latexmkrc  NOTATION.md  lgm_ssp_formula.tex  lgm_ssp_spec.tex  lgm_vs_lgmssp_analysis.tex  lgm_vs_s2p2.tex  main.tex  orderbook_references.bib  references.bib  ss2p2_formulation.tex  ss2p2_s2p2_results.tex  ss2p2_spec.tex
results/: comparison_table.json
scripts/: _parse_metrics.py  _smoke_run.sh  _template_run.sh  build_btc_eth_sol_7d.sh  build_events.py  build_events_day.sh  build_paper.sh  com.honglifu.hpcwatch.plist.example  compare_3way.sh  data_summary.py  eval_collect.py  eval_worker.sh  eval_worker_w1024.sh  evaluate.py  fetch_data.py  final_comparison.sh  final_comparison_v2.sh  final_report.py  flatten_paper.sh  hazard_probe.py  hpc-common.sh  lgm_round1_report.py  lgm_sweep.sh  lgm_sweep2.sh  lgm_sweep_submit.sh  lgmssp_tune.sh  mc_ablation.sh  multi_asset_cbse.sh  notify_email.py  orderbook_collect.py  qrsh_best_gpu.sh  rate_cal_ablation.sh  realism_all.sh  run_eval_all.sh  run_eval_w1024.sh  run_final_comparison.sh  run_final_v2.sh  run_gmni_marks_gmh.sh  run_gmni_marks_lgm.sh  run_gmni_marks_lgm086.sh  (+27 more)
tests/: smoke_decoder.py  verify_baselines.py
(+124 files in other folders)
