[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "volume-set-mtpp"
version = "0.1.0"
description = "Factorized neural marked temporal point processes (incl. LGM) for limit-order-book simulation"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Honglin Fu" }]
keywords = ["temporal-point-process", "hawkes", "limit-order-book", "market-simulation", "market-making"]

# torch is intentionally UNPINNED so `pip install -e .` on the UCL HPC cluster
# does not try to replace the CUDA-matched torch wheel already in the venv.
dependencies = [
    "torch",
    "numpy",
    "tqdm",
    "matplotlib",
    "pandas",
]

[project.optional-dependencies]
dev = ["pytest"]
tensorboard = ["tensorboard"]   # optional training-time logging (train.py guards the import)

[project.scripts]
vsmtpp-train               = "volume_set_mtpp.training.train:main"
tfow-genuine-eval          = "volume_set_mtpp.evaluation.tfow_genuine_eval:main"
tfow-stylized-facts        = "volume_set_mtpp.evaluation.tfow_stylized_facts:main"
tfow-nmh-thinning          = "volume_set_mtpp.evaluation.tfow_nmh_thinning:main"
tfow-compound-hawkes       = "volume_set_mtpp.evaluation.tfow_compound_hawkes:main"
tfow-mt-hawkes             = "volume_set_mtpp.evaluation.tfow_mt_hawkes:main"
tfow-price-facts           = "volume_set_mtpp.evaluation.tfow_price_facts:main"
tfow-price-facts-v2        = "volume_set_mtpp.evaluation.tfow_price_facts_v2:main"
tfow-build-comparison      = "volume_set_mtpp.evaluation.build_comparison_table:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
volume_set_mtpp = ["models/*.md"]
